--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -12,7 +12,7 @@
     // /* Bundler mode */
     // "moduleResolution": "bundler",
     // "allowImportingTsExtensions": true,
-    // "resolveJsonModule": true,
+    "resolveJsonModule": true,
     // "isolatedModules": true,
     // "noEmit": true,
     "jsx": "react-jsx",
