--- a/client/package.json
+++ b/client/package.json
@@ -17,13 +17,14 @@
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.11.2",
-    "vite": "^5.4.11"
+    "vite": "^5.4.11",
+    "@vitejs/plugin-react": "^4.3.4"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.7",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.3.5",
-    "@vitejs/plugin-react": "^4.2.1",
+    "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^8.38.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
